adicionado exercício 3 do módulo 7

--- a/7_TEMPLATE_ENGINE/3_dados_para_view/views/layouts/main.handlebars
+++ b/7_TEMPLATE_ENGINE/3_dados_para_view/views/layouts/main.handlebars
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handlebars</title>
+    <title>arquivo main</title>
 </head>
 <body>
     <header>
         <p>Barra de navegação</p>
     </header>
-    
     {{{body}}}
-
     <footer>
         <p>Rodapé</p>
     </footer>
